--- a/index.html
+++ b/index.html
@@ -177,6 +177,12 @@
         description: "EU government expenditure as % of GDP",
         color: "#008272",
         path: "eu-spending-chart.html"
+      },
+      {
+        name: "Terminal Shortcuts",
+        description: "Terminal vs Windows app keyboard shortcuts",
+        color: "#ff8c00",
+        path: "terminal-shortcuts-guide.html"
       }
     ];
 
